# DadosCvm

./: Exemplo.txt  README.md  analise.ipynb  main.py  pyproject.toml  requirements-test.txt  requirements.txt  teste.ipynb
arquivos/: dfp_cia_aberta_2024.csv  dfp_cia_aberta_DFC_MD_con_2024.csv  dfp_cia_aberta_DFC_MD_ind_2024.csv  dfp_cia_aberta_DRA_con_2024.csv  dfp_cia_aberta_DRA_ind_2024.csv  dfp_cia_aberta_composicao_capital_2024.csv
scripts/: main.py
src/dados_cvm/: balanco.py  cli.py  client.py  download.py  endpoints.py  extract.py  normalize.py  read.py
tests/: __init__.py  conftest.py  test_client.py  test_download.py  test_endpoints.py  test_extract.py
