[project]
name = "dadoscvm"
version = "0.1.0"
description = "Coleta dados de resultados financeiros do site da CVM"
authors = [
    {name = "Vinicius",email = "blanco.vinicius@uni9.edu.br"}
]
packages = [{ include = "dados_cvm", from = "src" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.4.7,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
